added_more_stuff

--- a/static/style.css
+++ b/static/style.css
@@ -44,24 +44,31 @@ main {
   text-align: center;
 }
 
+#species_form {
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  vertical-align: middle;
+  padding: 1%;
+  width:95%;
+  background-color: rgba(255, 255, 255, 0.769);
+  border-radius: 20px;
+  color: rgb(3, 5, 42);
+}
+
 #list {
   grid-area: list;
   display: flex;
   margin-right: 3%;
-  margin-top: -15%;
-  width: fit-content;
+  margin-bottom: -9%;
+  width: 95%;
+  height: 50%;
+  padding: 10px;
   text-align: left;
-  padding: 1%;
   background-color: rgba(143, 227, 236, 0.769);
   border-radius: 20px;
   color: rgb(3, 5, 42);
   align-self: center;
-}
-
-#form-container{
-  grid-area: form-container;
-  color: rgb(255, 255, 255);
-  margin-left: 50px;
 }
 
 #grid-container{
@@ -69,29 +76,14 @@ main {
   grid-template-areas: 
   'header header'
   'main main'
-  'form-container list'
+  'species_form list'
   'footer footer';
   grid-template-columns: 60% 40%; 
-  grid-template-rows: 15% 45% 45% 0%;
+  grid-template-rows: 15% 50% 35% 0%;
 }  
 
-#form-flex {
-  display: flex;
-  align-items: center;
-  text-align: left;
-  gap: 50px;
-  margin-right: 20%;
-  padding: 1%;
-  width: 90%;
-  background-color: rgba(255, 255, 255, 0.769);
-  border-radius: 20px;
-  color: rgb(3, 5, 42);
-  width: bold;
-  
-  
-}
 
-/* #button-input {
+#button-input {
   display: flex;
   margin-top: 8%;
   margin-left: -35rem;
@@ -105,9 +97,8 @@ main {
 }
 
 #submit_species:hover {
-  background-color: rgb(248, 46, 31);
+  background-color: rgb(248, 46, 31); 
 }
-
 /* JS Form interactions: */
 
 
